feature/mudanca-no-visual

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,42 @@
     </main>
 
 
+    <footer>
+      <div class="emcima">
+        
+        <BR></BR>
+  
+        <p>Conheça mais do RiscoZero em @RiscoZeroPrevenção</p>
+        <p>
+          Agencia Nacional de Proteção e Defesa Civil.
+          <br>
+          Prevenir para proteger. Agir para preservar.
+          <br>
+          Av. Paulista, 1106 - 7º andar - Bela Vista, São Paulo - SP, 01311-000
+          <BR></BR>
+          CONTATO
+          <BR></BR>
+          Telefone:
+          <br>
+          (11) 5555-5555
+          <br>
+          Instagram:
+          <br>
+          @RiscoZeroPrevenção
+          <br>
+          Email:
+          <br>
+          RiscoZeroPrevenção@gmail.com
+
+        </p>
+      </div>
+    </div>
+    <div class="embaixo">
+      <br>
+      © 2025 RiscoZero. Conteúdo protegido por direitos autorais. Todos os direitos reservados.
+    </div>
+    </footer>
+
 
 </body>
 </html>
