--- a/src/index.html
+++ b/src/index.html
@@ -11,26 +11,53 @@
 
 
 <body>
+  <script src="func.js"></script>
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="scr/pages/alagamentos.html">Alagamentos</a>
+    <a href="scr/pages/desastres.html">Desastres</a>
+    <a href="scr/pages/segurança.html">Segurança</a>
+  </nav>
 
-    <header>
-    <div class="top-bar"></div>
-    <div class="side-bar"></div>
-    </header>
-    <main>
-      <h2 class="texto">
-        Desde 2020, Prevendo para proteger. Agindo para preservar.
-      </h2>
+  <div class="content">
+    <div class="text">
+      <h2> Desde 2020, Prevendo para proteger. Agindo para preservar.</h2>
       <p class="texto2">
         Aqui no nosso site pode conferir onde está alagado por grandes chuvas, 
         pode ver se poderá acontecer algum desastre perto da sua localização. 
         E será alertado se alguma coisa pode afringir sua segurança! 
         Prever para proteger. Agir para preservar.
       </p>
-    </main>
+    </div>
+    <div class="carousel">
+      <div class="carousel-images">
+        <img src="assets/enchente.webp" alt="Enchente">
+        <img src="assets/queimada.png" alt="Queimadas">
 
-
+      </div>
+      <button class="prev">❮</button>
+      <button class="next">❯</button>
+    </div>
+  </div>
+    <div class="container">
+      <div class="card">
+        <h3>Alerta de Alagamento</h3>
+        <p>Confira as áreas afetadas por alagamentos em tempo real.</p>
+      </div>
+      <div class="card">
+        <h3>Previsão de Desastres</h3>
+        <p>Veja previsões de desastres naturais na sua região.</p>
+      </div>
+      <div class="card">
+        <h3>Notificações de Segurança</h3>
+        <p>Receba alertas sobre riscos à sua segurança.</p>
+      </div>
     <footer>
       <div class="emcima">
+        <header>
+          <div class="top-bar"></div>
+          <div class="side-bar"></div>
+          </header>
         
         <BR></BR>
   
