--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,11 @@
       <button class="next">❯</button>
     </div>
   </div>
+
+  <div class="banner">
+    <img src="assets/fundo.jpg" class="banner-img">
+    </div>
+
     <div class="container">
       <div class="card">
         <h3>Alerta de Alagamento</h3>
