chore/tirei-img

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
     <link rel="icon" type="image/png" href="assets/">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+     <link rel="icon" type="image/png" href="assets/RiscoZero.png.jpg">
 </head>
 
 
 <body>
+   
   <script src="func.js"></script>
   <nav>
     <a href="index.html">Início</a>
