--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RiscoZero</title>
-    <link rel="icon" type="image/png" href="assets/">
+    <link rel="icon" type="image/png" href="assets/RiscoZero.png-removebg-preview.png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
      <link rel="icon" type="image/png" href="assets/RiscoZero.png.jpg">
@@ -12,17 +12,22 @@
 
 
 <body>
-   
-  <script src="func.js"></script>
+   <script src="func.js"></script>
+   <div class="logo">
+        <img src="assets/RiscoZero.png-removebg-preview.png" alt="RiscoZero" class="logo-img">
+    </div>
+    <header class="top-bar">
   <nav>
     <a href="index.html">Início</a>
     <a href="scr/pages/alagamentos.html">Alagamentos</a>
     <a href="scr/pages/desastres.html">Desastres</a>
     <a href="scr/pages/segurança.html">Segurança</a>
   </nav>
+</header>
 
-  <div class="content">
-    <div class="text">
+<main>
+  <article>
+   <div class="text">
       <h2> Desde 2020, Prevendo para proteger. Agindo para preservar.</h2>
       <p class="texto2">
         Aqui no nosso site pode conferir onde está alagado por grandes chuvas, 
@@ -30,7 +35,8 @@
         E será alertado se alguma coisa pode afringir sua segurança! 
         Prever para proteger. Agir para preservar.
       </p>
-    </div>
+  </article>
+</main>
     <div class="carousel">
       <div class="carousel-images">
         <img src="assets/enchente.webp" alt="Enchente">
