--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <div class="carousel-slide" id="carousel-slide">
       <img src="assets/enchente.webp" alt="Imagem 1">
       <img src="assets/queimada.png" alt="Imagem 2">
-      <img src="assets/furacao.png" alt="Imagem 3">
+      <img src="assets/sp-chuva.png" alt="Imagem 3">
     </div>
     <div class="carousel-nav">
       <button onclick="prevSlide()">❮</button>
