feature/img-reconstrucao

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
   <div class="carousel-container">
     <div class="carousel-slide" id="carousel-slide">
       <img src="assets/enchente.webp" alt="Imagem 1">
-      <img src="assets/queimada.png" alt="Imagem 2">
-      <img src="assets/sp-chuva.png" alt="Imagem 3">
+      <img src="assets/enchente2.jpg" alt="Imagem 2">
+      <img src="assets/enchente3.jpg" alt="Imagem 3">
     </div>
     <div class="carousel-nav">
       <button onclick="prevSlide()">❮</button>
@@ -59,6 +59,9 @@
 </div>
 </div>
 
+ <div id="enchente2">
+  <img src="assets/reconstrucao.jpg" >
+</div>
 
 <footer>
   <div class="footer-container">
