--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RiscoZero</title>
     <link rel="icon" type="image/png" href="assets/RiscoZero.png-removebg-preview.png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="src/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
      <link rel="icon" type="image/png" href="assets/RiscoZero.png.jpg">
 </head>
@@ -16,7 +16,7 @@
    <div class="logo-container">
     <header>
       <div class="header-container">
-        <img src="assets/RiscoZero.png-removebg-preview.png" class="logo">
+        <img src="src/assets/RiscoZero.png-removebg-preview.png" class="logo">
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
@@ -29,45 +29,6 @@
         </div>
       </div>
     </header>
-
-<div class="main-section">
-  
-  <div class="carousel-container">
-    <div class="carousel-slide" id="carousel-slide">
-      <img src="assets/enchente.webp" alt="Imagem 1">
-      <img src="assets/enchente2.jpg" alt="Imagem 2">
-      <img src="assets/enchente3.jpg" alt="Imagem 3">
-    </div>
-    <div class="carousel-nav">
-      <button onclick="prevSlide()">❮</button>
-      <button onclick="nextSlide()">❯</button>
-    </div>
-  </div>
-
-  <div class="content">
-    <h2>Por que prevenir enchentes?</h2>
-    <p>
-      Enchentes causam grandes prejuízos e afetam milhares de pessoas todos os anos.
-      Com ações simples como manter bueiros limpos, preservar áreas verdes e evitar
-      o descarte de lixo nas ruas, podemos reduzir os riscos e proteger vidas.
-    </p>
-  </div>
-</div>
-
-
-<div class="comoAgir">
-  <h2>Como agir para preservar?</h2>
-  <p>
-    A preservação do meio ambiente é fundamental para evitar desastres naturais.
-    Denunciar queimadas, plantar árvores e participar de campanhas de conscientização
-    são formas eficazes de agir. Juntos, podemos fazer a diferença!
-  </p>
-</div>
-</div>
-
- <div id="enchente2">
-  <img src="assets/reconstrucao.jpg" >
-</div>
 
 <footer>
   <div class="footer-container">
