--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RiscoZero</title>
-    <link rel="icon" type="image/png" href="assets/RiscoZero.png-removebg-preview.png">
+    <link rel="icon" type="image/png" href="src/assets/RiscoZero.png-removebg-preview.png">
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
      <link rel="icon" type="image/png" href="assets/RiscoZero.png.jpg">
