fix/img-enchente2

--- a/src/index.html
+++ b/src/index.html
@@ -55,18 +55,18 @@
 </div>
 
 
-<div class="comoAgir">
-  <h2>Como agir para preservar?</h2>
+
+
+ <div id="enchente2">
+  <img src="assets/enchente2.jpg" alt="enchente2" style="width: 380px; border-radius:15px;">
+  <div class="comoAgir">
+     <h2>Como agir para preservar?</h2>
   <p>
     A preservação do meio ambiente é fundamental para evitar desastres naturais.
     Denunciar queimadas, plantar árvores e participar de campanhas de conscientização
     são formas eficazes de agir. Juntos, podemos fazer a diferença!
   </p>
-</div>
-</div>
-
- <div id="enchente2">
-  <img src="assets/reconstrucao.jpg" >
+  </div>
 </div>
 
 <footer>
