--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RiscoZero</title>
-    <link rel="icon" type="image/png" href="src/assets/RiscoZero.png-removebg-preview.png">
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="icon" type="image/png" href="../assets/RiscoZero.png-removebg-preview.png">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
      <link rel="icon" type="image/png" href="assets/RiscoZero.png.jpg">
 </head>
@@ -16,19 +16,34 @@
    <div class="logo-container">
     <header>
       <div class="header-container">
-        <img src="src/assets/RiscoZero.png-removebg-preview.png" class="logo">
+        <img src="../assets/RiscoZero.png-removebg-preview.png" class="logo">
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
             <nav>
-      <a href="index.html">ínicio</a>
-      <a href="pages/alertas.html">Alertas</a>
-      <a href="pages/quiz.html">Quiz</a>
+      <a href="../index.html">ínicio</a>
+      <a href="../pages/alertas.html">Alertas</a>
+      <a href="../pages/quiz.html">Quiz</a>
 
     </nav>
         </div>
       </div>
     </header>
+
+   <div id="selecionaCidade">
+      <div class="cidade">
+        <select>
+          <option value="São Paulo">São Paulo</option>
+          <option value="Jundía">Jundía</option>
+          <option value="Guarulhos">Guarulhos</option>
+          <option value="Rio de Janeiro">Rio de Janeiro</option>
+          <option value="Arraia do Cabo">Arraia do Cabo</option>
+          <option value="Barra do Pírai">Barra do Pírai</option>
+        </select>
+      </div>
+  </div>
+  <BR></BR>
+
 
 <footer>
   <div class="footer-container">
