Style/Css formulario

--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -33,7 +33,7 @@
    
   <!-- <BR></BR> -->
 
-      <form id="meuFormulario">
+      <form id="meuFormulario" class="formularioQuiz">
         <h2 class="questoesQuiz">1. Qual dos eventos abaixo é considerado um desastre natural?</h2><br>
         <input type="radio" name="questao1" value="explosaoFabrica" />
         <span>Explosão em fábrica</span><br>
