fix/ menu hamburguer adicionado na pagina quiz e alertas, criação do menu.js

--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -20,12 +20,14 @@
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
-            <nav>
-      <a href="../index.html">ínicio</a>
-      <a href="../pages/alertas.html">Alertas</a>
-      <a href="../pages/quiz.html">Quiz</a>
-
-    </nav>
+          <button id="hamburger">
+            ☰
+          </button>
+          <nav id="menu">
+            <a href="../index.html">Início</a>
+            <a href="alertas.html">Alertas</a>
+            <a href="quiz.html">Quiz</a>
+          </nav>
   </div>
 </div>
     </header>
@@ -176,5 +178,6 @@
 
 
 </body>
-<script src="../js/quiz.js"></script>
+<script src="../js/quiz.js" ></script>
+<script src="../js/menu.js"></script>
 </html>
