--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -12,7 +12,6 @@
 
 
 <body>
-   <script src="func.js"></script>
    <div class="logo-container">
     <header>
       <div class="header-container">
@@ -20,12 +19,14 @@
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
-            <nav>
-      <a href="../index.html">ínicio</a>
-      <a href="../pages/alertas.html">Alertas</a>
-      <a href="../pages/quiz.html">Quiz</a>
-
-    </nav>
+          <button id="hamburger">
+            ☰
+          </button>
+          <nav id="menu">
+            <a href="../index.html">Início</a>
+            <a href="alertas.html">Alertas</a>
+            <a href="quiz.html">Quiz</a>
+          </nav>
         </div>
       </div>
     </header>
@@ -83,4 +84,6 @@
 
 
 </body>
+<script src="../js/func.js"></script>
+<script src="../js/menu.js"></script>
 </html>
