chore/so pra syncar

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     <p>
       Enchentes causam grandes prejuízos e afetam milhares de pessoas todos os anos.
       Com ações simples como manter bueiros limpos, preservar áreas verdes e evitar
-      o descarte de lixo nas ruas, podemos reduzir os riscos e proteger vidas
+      o descarte de lixo nas ruas, podemos reduzir os riscos e proteger vidas. 
     </p>
   </div>
 </div>
