feature/alertas-igual-python

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,10 @@
   
   <div class="carousel-container">
     <div class="carousel-slide" id="carousel-slide">
-      <img src="assets/enchente.webp" alt="Imagem 1">
-      <img src="assets/enchente2.jpg" alt="Imagem 2">
-      <img src="assets/enchente3.jpg" alt="Imagem 3">
+      <img src="assets/enchente.webp" alt="Enchente no Rio Grande do Sul">
+      <img src="assets/enchente2.jpg" alt="Enchente em uma cidade do interiror">
+      <img src="assets/enchente3.jpg" alt="Enchentes no Rio Grande do Sul">
+      <img src="assets/reconstrucao.jpg" alt="Destruição deixada depois de uma enchente">
     </div>
     <div class="carousel-nav">
       <button onclick="prevSlide()">❮</button>
@@ -46,11 +47,12 @@
   </div>
 
   <div class="content">
-    <h2>Por que prevenir enchentes?</h2>
+    <h2>Nosso sistema de alerta:</h2>
     <p>
-      Enchentes causam grandes prejuízos e afetam milhares de pessoas todos os anos.
-      Com ações simples como manter bueiros limpos, preservar áreas verdes e evitar
-      o descarte de lixo nas ruas, podemos reduzir os riscos e proteger vidas. 
+      Enchentes são fenômenos naturais que ocorrem quando há um acúmulo excessivo de água em uma área,
+      geralmente devido a chuvas intensas, transbordamento de rios ou lagos. Elas podem causar
+      danos significativos à infraestrutura, propriedades e ao meio ambiente, além de representar riscos
+      à vida humana.
     </p>
   </div>
 </div>
@@ -108,7 +110,7 @@
 
 
 </body>
-<script src="./js/func.js"></script>
+<script src="./js/js.js"></script>
 <script src="./js/menu.js"></script>
 
 </html>
