--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -12,7 +12,7 @@
   
   
 <body>
-  <!-- <script src="func.js"></script> -->
+  <!-- <script src="js.js"></script> -->
   <div class="logo-container">
     <header>
       <div class="header-container">
