fix/tirei img bugada

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
 
 
  <div id="enchente2">
-  <img src="assets/enchente2.jpg" alt="enchente2" style="width: 380px; border-radius:15px;">
+  <img src="assets/sp-chuva.png" alt="enchente2" style="width: 380px; border-radius:15px;">
   <div class="comoAgir">
      <h2>Como agir para preservar?</h2>
   <p>
