fix/img invertida bugada

--- a/src/index.html
+++ b/src/index.html
@@ -60,15 +60,18 @@
 
 
 
- <div id="enchente2">
-  <img src="assets/sp-chuva.png" alt="enchente2" style="width: 380px; border-radius:15px;">
-  <div class="comoAgir">
-     <h2>Como agir para preservar?</h2>
+ <div id="solucionarComo">
+  <img src="assets/enchente-sp.jpg" alt="São Paulo em plena enchente" style="width: 380px; border-radius:50px;">
+  <div class="comoSolucionar">
+     <h2>Como Solucionamos isso?</h2>
   <p>
-    A preservação do meio ambiente é fundamental para evitar desastres naturais.
-    Denunciar queimadas, plantar árvores e participar de campanhas de conscientização
-    são formas eficazes de agir. Juntos, podemos fazer a diferença!
+   Com nosso site de monitoramento de enchentes 
+   e de alertas, podemos avisar a população que está ocorrendo uma enchente ou que pode ocorrer uma enchente 
+   em sua região. Com isso, a população pode se preparar para o pior, 
+  evitando assim tragédias e perdas de vidas.
+
   </p>
+
   </div>
 </div>
 <BR></BR>
