feature/adicionado txt e botoes de temas

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
+          <div id="temaEscuro">🌙</div>
+          <div id="temaClaro">☀️</div>
+          <div id="temaRosa">🌸</div>
           <button id="hamburger">
             ☰
           </button>
@@ -110,5 +113,6 @@
 </body>
 <script src="./js/func.js"></script>
 <script src="./js/menu.js"></script>
+<script src="./js/temas.js"></script>
 
 </html>
