--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -13,7 +13,7 @@
 
 <body>
    <div class="logo-container">
-    <header>
+    <header id="header">
       <div class="header-container">
         <img src="../assets/RiscoZero.png-removebg-preview.png" class="logo">
         <div class="header-text">
