feature/mapa em alerta

--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -31,30 +31,24 @@
       </div>
     </header>
 
-   <div id="selecionaCidade" >
-  <label for="estado">Escolha o estado:</label>
-  <select id="estado">
-  <option value="">Selecione</option>
-  <option value="SãoPaulo">São Paulo</option>
-  <option value="RiodeJaneiro">Rio de Janeiro</option>
-  <option value="BH">Belo Horizonte</option>
-  <option value="PortoAlegre">Porto Alegre </option>
-  <option value="Palmas">Palmas</option>
-  <option value="Natal">Natal</option>
-  <option value="Amazonas">Amazonas</option>
-  
-</select>
+   
 
-<div id="mensagem" style="display:none; margin-top:10px;">
-  ----------S.O.S Enchentes esta aqui para te ajudar!----------
-  <P> -------- Sistema de Monitoramento de Enchentes </P>
-  <p> 1- Verificar situação de uma região</p>
-  <p> 2- atualizar dados de um região</p>
-  <p> 3- Relatório geral de risco</p>
-  <p> 4- Sair</p>
+<div id="atencaoRisco">
+  <p> Veja como esta sua região! E fique seguro:</p>
+  <iframe id='mapaRiscos' src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d467690.1491251197!2d-46.92564874016986!3d-23.68206208839371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce448183a461d1%3A0x9ba94b08ff335bae!2zU8OjbyBQYXVsbywgU1A!5e0!3m2!1spt-BR!2sbr!4v1748963640932!5m2!1spt-BR!2sbr" width="1500" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+
+<div id="legendaMapa">
+  <h2>Legenda do Mapa</h2>
+  <ul>
+    <li><span class="red"></span>  🚨 Risco Alto</li>
+    <li><span class="laranja"></span>  ⚠ Risco Moderado</li>
+    <li><span class="icon yellow"></span> ❗ Risco Baixo</li>
+    <li><span class="icon green"></span> ✅ Sem Risco</li>
+  </ul>
+  <p>As áreas marcadas no mapa indicam os níveis de risco de enchentes na região.</p>
 
 </div>
-  </div>
 
   <BR></BR>
 
