fix/img invertida

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 
 
  <div id="solucionarComo">
-  <img src="assets/enchente-sp.jpg" alt="São Paulo em plena enchente" style="width: 380px; border-radius:50px;">
+  <img src="assets/enchente-sp.jpg" alt="São Paulo em plena enchente" style="width: 450px; border-radius:40px;">
   <div class="comoSolucionar">
      <h2>Como Solucionamos isso?</h2>
   <p>
@@ -72,11 +72,34 @@
    e de alertas, podemos avisar a população que está ocorrendo uma enchente ou que pode ocorrer uma enchente 
    em sua região. Com isso, a população pode se preparar para o pior, 
   evitando assim tragédias e perdas de vidas.
-
   </p>
-
   </div>
 </div>
+</div>
+
+<div id="tecnologia">
+  <h3>As Tecnologias que usamos:</h3>
+  <p>
+    Utilizamos tecnologias avançadas de monitoramento meteorológico e hidrológico, como sensores de nível de água, 
+    estações meteorológicas e imagens de satélite. Esses dados são processados em tempo real para prever enchentes 
+    e emitir alertas precisos. Além disso, empregamos inteligência artificial para analisar padrões climáticos e 
+    melhorar a precisão das previsões.
+  </p>
+</div>
+
+<br></br>
+<div id="objetivos">
+  <h3>Os nossos objetivos:</h3>
+  <ol>
+    <li>Ajudar o povo brasileiro</li>
+    <li>Prevenir tragédias</li>
+    <li> Aumentar a conscientização sobre enchentes</li>
+    <li>Proteger vidas e propriedades</li>
+  </ol>
+
+</div>
+
+
 <BR></BR>
 <footer>
   <div class="footer-container">
