--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 
 
  <div id="solucionarComo">
-  <img src="assets/enchente-sp.jpg" alt="São Paulo em plena enchente" style="width: 450px; border-radius:40px;">
+  <img src="assets/enchente-sp.jpg" alt="São Paulo em plena enchente"  class="aumentada"   style="width: 450px; border-radius:40px;">
   <div class="comoSolucionar">
      <h2>Como Solucionamos isso?</h2>
   <p>
@@ -77,6 +77,8 @@
 </div>
 </div>
 
+<br></br>
+<BR></BR>
 <div id="tecnologia">
   <h3>As Tecnologias que usamos:</h3>
   <p>
@@ -87,16 +89,21 @@
   </p>
 </div>
 
-<br></br>
-<div id="objetivos">
-  <h3>Os nossos objetivos:</h3>
-  <ol>
-    <li>Ajudar o povo brasileiro</li>
-    <li>Prevenir tragédias</li>
-    <li> Aumentar a conscientização sobre enchentes</li>
-    <li>Proteger vidas e propriedades</li>
-  </ol>
+<div class="linha"></div>
 
+  <div id="objetivos">
+  <div class="objetivos-text">
+    <h3>Os nossos objetivos:</h3>
+    <ol>
+      <li>Ajudar o povo brasileiro;</li>
+      <li>Prevenir tragédias;</li>
+      <li> Aumentar a conscientização sobre enchentes;</li>
+      <li>Proteger vidas e propriedades;</li>
+      <li>Fornecer ajuda para aqueles afetados pelas enchentes;</li>
+    </ol>
+  </div>
+    <img src="assets/ajuda.jpg" alt="Ajuda Comunitaria que aconteceu na tragédia do Rio Grande Do Sul"  class="aumentada"   style="width: 450px; border-radius:40px;">
+  </div>
 </div>
 
 
