--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,36 @@
 </div>
 
 
+<div id="publicoAlvo">
+  <h3>Nosso público alvo:</h3>
+  <p>
+    Nosso público alvo são pessoas que moram em regiões propensas a enchentes, 
+    como áreas ribeirinhas, cidades costeiras e regiões montanhosas. Também atendemos 
+    autoridades locais, organizações de emergência e comunidades vulneráveis que precisam de informações 
+    precisas e atualizadas sobre enchentes para tomar decisões informadas e proteger suas vidas e propriedades.
+  </p>
+</div>
+
+<div id="beneficios">
+  <h3>Benefícios do nosso site:</h3>
+  <ul>
+    <li>Alertas em tempo real sobre enchentes;</li>
+    <li>Informações precisas e atualizadas sobre condições climáticas;</li>
+    <li>Mapas interativos de áreas de risco;</li>
+    <li>Orientações sobre como se preparar para enchentes;</li>
+    <li>Recursos educacionais sobre prevenção de enchentes;</li>
+    <li>Comunicação direta com autoridades locais e equipes de emergência.</li>
+  </ul>
+</div>
+
+<div id="comoAjudar">
+  <h3>Como Vamos te ajudar diariamente</h3>
+  <p>
+    Nosso site oferece atualizações diárias sobre as condições climáticas e de enchentes em sua região. 
+    Você receberá alertas por e-mail ou SMS quando houver risco de enchente.
+  </p>
+</div>
+
 <BR></BR>
 <footer>
   <div class="footer-container">
