--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -20,6 +20,9 @@
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
+          <div id="temaEscuro">🌙</div>
+          <div id="temaClaro">☀️</div>
+          <div id="temaRosa">🌸</div>
           <button id="hamburger">
             ☰
           </button>
