--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
         <div class="header-text">
           <h1>RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
-          <div id="temaEscuro">🌙</div>
-          <div id="temaClaro">☀️</div>
-          <div id="temaRosa">🌸</div>
+          <div id="botaoEscuro">🌙</div>
+          <div id="botaoClaro">☀️</div>
+          <div id="botaoRosa">🌸</div>
           <button id="hamburger">
             ☰
           </button>
