--- a/src/index.html
+++ b/src/index.html
@@ -107,15 +107,6 @@
 </div>
 
 
-<div id="publicoAlvo">
-  <h3>Nosso público alvo:</h3>
-  <p>
-    Nosso público alvo são pessoas que moram em regiões propensas a enchentes, 
-    como áreas ribeirinhas, cidades costeiras e regiões montanhosas. Também atendemos 
-    autoridades locais, organizações de emergência e comunidades vulneráveis que precisam de informações 
-    precisas e atualizadas sobre enchentes para tomar decisões informadas e proteger suas vidas e propriedades.
-  </p>
-</div>
 
 <div id="beneficios">
   <h3>Benefícios do nosso site:</h3>
@@ -129,13 +120,28 @@
   </ul>
 </div>
 
-<div id="comoAjudar">
-  <h3>Como Vamos te ajudar diariamente</h3>
-  <p>
+
+
+<div style="display: flex; align-items: center; justify-content: center;">
+  <div id="publicoAlvo">
+    <h3>Nosso público alvo:</h3>
+    <p>
+    Nosso público alvo são pessoas que moram em regiões propensas a enchentes, 
+    como áreas ribeirinhas, cidades costeiras e regiões montanhosas. Também atendemos 
+    autoridades locais, organizações de emergência e comunidades vulneráveis que precisam de informações 
+    precisas e atualizadas sobre enchentes para tomar decisões informadas e proteger suas vidas e propriedades.
+    </p>
+  </div>
+<div class="linha-vertical"></div>
+  <div id="comoAjudar">
+    <h3>Como Vamos te ajudar diariamente</h3>
+    <p>
     Nosso site oferece atualizações diárias sobre as condições climáticas e de enchentes em sua região. 
     Você receberá alertas por e-mail ou SMS quando houver risco de enchente.
-  </p>
+    </p>
+  </div>
 </div>
+
 
 <BR></BR>
 <footer>
