--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <div class="header-container">
         <img src="assets/RiscoZero.png-removebg-preview.png" class="logo">
         <div class="header-text">
-          <h1>RiscoZero</h1>
+          <h1>  S.O.S Enchentes - RiscoZero</h1>
           <p>Prevenindo para proteger, agindo para preservar!</p>
           <div id="botaoEscuro">🌙</div>
           <div id="botaoClaro">☀️</div>
@@ -120,8 +120,8 @@
   </ul>
 </div>
 
-
-
+<BR></BR>
+<br></br>
 <div style="display: flex; align-items: center; justify-content: center;">
   <div id="publicoAlvo">
     <h3>Nosso público alvo:</h3>
