--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,7 @@
 </div>
 
 <div class="linha"></div>
+<BR></BR>
 
   <div id="objetivos">
   <div class="objetivos-text">
@@ -106,18 +107,22 @@
   </div>
 </div>
 
+<BR></BR>
+<BR></BR>
 
-
-<div id="beneficios">
-  <h3>Benefícios do nosso site:</h3>
-  <ul>
-    <li>Alertas em tempo real sobre enchentes;</li>
-    <li>Informações precisas e atualizadas sobre condições climáticas;</li>
-    <li>Mapas interativos de áreas de risco;</li>
-    <li>Orientações sobre como se preparar para enchentes;</li>
-    <li>Recursos educacionais sobre prevenção de enchentes;</li>
-    <li>Comunicação direta com autoridades locais e equipes de emergência.</li>
-  </ul>
+<div id="beneficios-img">
+    <img  src="assets/alerta.jpg].jpg" alt="Alerta da Defesa Cívil sobre enchentes na capital de São Paulo" class="aumentada" style="width: 450px; border-radius:40px;">
+  <div id="beneficios">
+    <h3>Benefícios do nosso site:</h3>
+    <ul>
+      <li>Alertas em tempo real sobre enchentes;</li>
+      <li>Informações precisas e atualizadas sobre condições climáticas;</li>
+      <li>Mapas interativos de áreas de risco;</li>
+      <li>Orientações sobre como se preparar para enchentes;</li>
+      <li>Recursos educacionais sobre prevenção de enchentes;</li>
+      <li>Comunicação direta com autoridades locais e equipes de emergência.</li>
+    </ul>
+  </div>
 </div>
 
 <BR></BR>
@@ -134,7 +139,7 @@
   </div>
 <div class="linha-vertical"></div>
   <div id="comoAjudar">
-    <h3>Como Vamos te ajudar diariamente</h3>
+    <h3>Como Vamos te ajudar diariamente:</h3>
     <p>
     Nosso site oferece atualizações diárias sobre as condições climáticas e de enchentes em sua região. 
     Você receberá alertas por e-mail ou SMS quando houver risco de enchente.
