--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiscoZero</title>
+    <title>S.O.S Enchentes - RiscoZero</title>
     <link rel="icon" type="image/png" href="../assets/RiscoZero.png-removebg-preview.png">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -17,7 +17,8 @@
       <div class="header-container">
         <img src="../assets/RiscoZero.png-removebg-preview.png" class="logo">
         <div class="header-text">
-          <h1>RiscoZero</h1>
+          <h1>S.O.S Enchentes - RiscoZero</h1>
+
           <p>Prevenindo para proteger, agindo para preservar!</p>
           <div id="botaoEscuro">🌙</div>
           <div id="botaoClaro">☀️</div>
