--- a/src/pages/quiz.html
+++ b/src/pages/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RiscoZero</title>
+    <title>S.O.S Enchentes - RiscoZero</title>
     <link rel="icon" type="image/png" href="../assets/RiscoZero.png-removebg-preview.png">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
