--- a/src/pages/alertas.html
+++ b/src/pages/alertas.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="../assets/RiscoZero.png-removebg-preview.png">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-     <link rel="icon" type="image/png" href="assets/RiscoZero.png.jpg">
+     <link rel="icon" type="image/png" href="../assets/RiscoZero.png-removebg-preview.png">
 </head>
 
 
@@ -27,9 +27,9 @@
             ☰
           </button>
           <nav id="menu">
-            <a href="../index.html">Início</a>
-            <a href="alertas.html">Alertas</a>
-            <a href="quiz.html">Quiz</a>
+            <a href="../../index.html">Início</a>
+            <a href="../pages/alerta.html">Alertas</a>
+            <a href="../pages/quiz.html">Quiz</a>
           </nav>
         </div>
       </div>
