--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </button>
           <nav id="menu">
             <a href="index.html">ínicio</a>
-            <a href="../src/pages/alertas.html">Alertas</a>
+            <a href="src/pages/alertas.html">Alertas</a>
             <a href="src/pages/quiz.html">Quiz</a>
           </nav>
         </div>
