chore/so syncar

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
       Enchentes são fenômenos naturais que ocorrem quando há um acúmulo excessivo de água em uma área,
       geralmente devido a chuvas intensas, transbordamento de rios ou lagos. Elas podem causar
       danos significativos à infraestrutura, propriedades e ao meio ambiente, além de representar riscos
-      à vida humana.
+      à vida humana 
     </p>
   </div>
 </div>
