style/linha e card

--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
     <p>
     Nosso site oferece atualizações diárias sobre as condições climáticas e de enchentes em sua região. 
     Você receberá alertas por e-mail ou SMS quando houver risco de enchente.
+    Além disso, fornecemos dicas de segurança, orientações sobre como se preparar para enchentes e informações
+    sobre como agir durante uma emergência. 
     </p>
   </div>
 </div>
